--- a/contact_Page/style.css
+++ b/contact_Page/style.css
@@ -105,70 +105,176 @@ header{
 }
 
 
+/* contact */
 
 
+.contact-cnt{
+    margin-top: 5.5%;
+    margin-bottom: 6%;
+}
 
-/*img background*/
-
-
-
-.profileBox{
-    height: 100vh;
-    display: flex;
+.contact .txt_cntct{
+    background-color: #2c61a7;
+    height: 60vh;
     text-align: center;
 }
 
-.txtProf{
-    position: absolute;
-    top: 12%;
-    left: 6%;
+.contact-cnt .contact h2{
+    font-size: 300%;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    margin-top: 6%;
 }
 
-.profileBox h1{
-    font-size: 100px;
-}
-
-.profileBox img{
-    position: absolute;
-    height: 100vh;
-    width: 100%;
-    opacity: 60%;
-}
-
-.footertxt{
-    position: absolute;
-    bottom: 10%;
-    right: 5%;
-    z-index: 100;
-}
-
-.footertxt h4{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 135%;
-}
-
-.wavesprf{
+.contact-cnt .contact{
     display: flex;
     flex-direction: column;
-    justify-content: end;
-    width: auto;
-    height: auto;
+    justify-content: center;
 }
 
-.wave1{
-    width: 55%;
-    right: 0;
-    opacity: 85%;
+.contact-cnt .contact .cntct_employs ul{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(2,1fr);
+    row-gap: 10%;
+
+    /*display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-basis: 500px;*/
+}
+
+.contact-cnt .contact .cntct_employs ul li{
+    list-style: none;
+    display: inline-block;
+    /*border: 1px dashed #eee;*/
+}
+
+.cntct_employs ul li .firstCntct_info{
+    background-color: #97e7d3;
+    width: 70%;
+    height: 25pc; 
+    position: relative;
+    top: -5pc;
+    margin: auto;
+    padding: 1.5%;
+    border-radius: 20px;
+    flex-grow: 1;
+
+    box-shadow:  -2px 2px 17px #222;
+
+    .img_ctn{
+        height: 20%;
+        text-align: center;
+    }
+
+    .img_ctn img{
+        height: 120%;
+        width: 40%;
+        position: relative;
+        border-radius: 50%;
+        top: -50%;
+        border: 2px solid #000;
+        overflow: hidden;
+    }
+
+    .ext_Detail{
+        height: 50%;
+        text-align: justify;
+    }
+
+    .redes_Detail {
+        text-align: center;
+        font-weight: 600;
+        letter-spacing: 0.5px;
+    }
+
 }
 
 
-/*banne*/
+.cntct_employs ul li .sndCntct_info{
+    background-color: #97e7d3;
+    width: 70%;
+    height: 25pc; 
+    position: relative;
+    top: -5pc;
+    margin: auto;
+    padding: 1.5%;
+    border-radius: 20px;
 
-
-.banner{
-    height: 100vh;
-    width: 100vw;
+    box-shadow:  -2px 2px 17px #222;
 }
+
+
+.cntct_employs ul li .thrtCntct_info{
+    background-color: #97e7d3;
+    width: 70%;
+    height: 25pc; 
+    position: relative;
+    top: -5pc;
+    margin: auto;
+    padding: 1.5%;
+    border-radius: 20px;
+    
+    box-shadow:  -2px 2px 17px #222;
+}
+
+.cntct_employs ul li .frthCntct_info{
+    background-color: #97e7d3;
+    width: 70%;
+    height: 25pc; 
+    position: relative;
+    top: -5pc;
+    margin: auto;
+    padding: 1.5%;
+    border-radius: 20px;
+
+    box-shadow:  -2px 2px 17px #222;
+}
+
+.cntct_employs ul li .ffthCntct_info{
+    background-color: #97e7d3;
+    width: 70%;
+    height: 25pc; 
+    position: relative;
+    top: -5pc;
+    margin: auto;
+    padding: 1.5%;
+    border-radius: 20px;
+
+    box-shadow:  -2px 2px 17px #222;
+}
+
+.cntct_employs ul li .sxthCntct_info{
+    background-color: #97e7d3;
+    width: 70%;
+    height: 25pc; 
+    position: relative;
+    top: -5pc;
+    margin: auto;
+    padding: 1.5%;
+    border-radius: 20px;
+
+    box-shadow:  -2px 2px 17px #222;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
