--- a/SAIgpt/style.css
+++ b/SAIgpt/style.css
@@ -19,7 +19,7 @@
 }
 
 body{
-    background-color: var(--mediunClr);
+    background-color: var(--drkBlClr);
     font-family: sans-serif;
     display: grid;
     max-width: 100vw;
@@ -38,7 +38,6 @@ header{
     grid-area: header;
     background-color: var(--bckGrnd);
     padding: 1%;
-    height: 100%;
     border-radius: 0 0 10px 10px;
 }
 
@@ -53,6 +52,7 @@ header nav {
     }
 }
 
+
 header nav .txt_nav .infoTxt li{
     list-style: none;
     display: inline-block;
@@ -63,10 +63,9 @@ header nav .txt_nav .infoTxt li{
         height: 30px;
         border-radius: 50%;
     }
-    p{
-        font-weight: bolder;
+    p, a{
         align-content: center;
-        margin-left: 5px;
+        margin-left: 3px;
         letter-spacing: 0.5px;
     }
     i{
@@ -84,10 +83,6 @@ header nav .txt_nav .infoTxt li{
 
 .fa-mobile{
     color: #53237a;
-}
-
-.fa-bars-staggered{
-    display: none;
 }
 
 header nav div .linkA1{
@@ -141,9 +136,14 @@ header nav .txt_nav:nth-child(2) .infoTxt{
     width: 150%;
 }
 
-header nav .txt_nav .infoTxt .profileTxt{
+header nav .txt_nav .profileTxt{
     margin-right: 10%;
 }
+
+
+
+
+
 
 
 /*main*/
@@ -156,25 +156,68 @@ main{
 }
 
 main .pnlAi{
-    width: 100px;
+    width: 100%;
     height: 100px;
     border-radius: 20px;
-    margin: 20px 0 0 20px;
-    width: 95%;
     height: 80%;
 }
 
 main .txtBox_ctn{
     width: 100%;
     height: 20%;
-    padding: 20;
+    display: flex;
+    flex-direction: row;
     align-content: center;
+
+    .addNew{
+        margin-left: 5%;
+        margin-top: 4.5%;
+    }
 }
+
+.addNew{
+    height: 8%;
+    align-content: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+    .btnAdd{
+        margin: auto;
+        cursor: pointer;
+        padding: 10px;
+        border: none;
+        background-color: var(--NeutroColor);
+        border-radius: 9999px;
+    }
+
+}
+.btnAdd i{
+    transition: 700ms;
+}
+
+.btnAdd:hover{
+    transition: 0.5s;
+    background-color: #c2c6ce86;
+    transform: scale(1.1);
+
+    i{
+        transform: rotate(90deg)
+    }
+}
+
+.btnAdd:hover::after{
+    transition: 0.5s;
+    content: "Añadir chat";
+    text-transform: uppercase;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
 
 main .txtBox_ctn .txtBox{
     border: 1px solid #545250;
     width: 80%;
-    margin-left: 10%;
+    margin-left: 6%;
     padding: 1%;
     border-radius: 20px;
     display: flex;
@@ -186,7 +229,6 @@ main .txtBox_ctn .txtBox{
         background-color: transparent;
         color: #fff;
         height: 90%;
-        max-width: 58pc;
         font-size: 16px;
         padding: 10px;
         border: none;
@@ -219,7 +261,66 @@ main .txtBox_ctn .txtBox{
     }
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
 /*section*/
+
+.checkbox-wrapper-41 {
+    --size: 70px;
+    margin: auto;
+}
+
+.checkbox-wrapper-41 input[type="checkbox"] {
+    -webkit-appearance: none;
+    width: var(--size);
+    height: calc(var(--size) / 2);
+    background-color: #fff;
+    border: 3px solid #222;
+    border-radius: 30px 100px 100px 100px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+    outline: none;
+    cursor: pointer;
+    position: relative;
+    transition: all 0.5s;
+}
+
+.checkbox-wrapper-41 input[type="checkbox"]::before {
+    content: "";
+    position: absolute;
+    width: calc(var(--size) / 2);
+    height: calc(var(--size) / 2);
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%) scale(0.7);
+    border: 3px solid #222;
+    border-radius: 30px 100px 100px 100px;
+    background-color: #fde881;
+    box-sizing: border-box;
+    transition: all 0.5s;
+}
+
+.checkbox-wrapper-41 input[type="checkbox"]:checked {
+    background-color: #fde881;
+    border-radius: 100px 100px 30px 100px;
+}
+
+.checkbox-wrapper-41 input[type="checkbox"]:checked::before {
+    left: 50%;
+    background-color: #fff;
+    border-radius: 100px 100px 30px 100px;
+}
+
+
 
 .historyChats{
     grid-area: section;
@@ -380,7 +481,155 @@ main .txtBox_ctn .txtBox{
     margin: 0 0 0 18px;
 }
 
-.disp,
-.fa-bars-staggered{
+.menuToggle{
     display: none!important;
 }
+
+
+.visible{
+    display: block;
+}
+
+.invisible{
+    display: none;
+}
+
+.icnBck{
+    color: #fff;
+    position: absolute;
+    margin-top: 2%;
+    margin-left: 5%;
+}
+
+.dark-lttr{
+    background-color: var(--drkBlClr)!important;
+}
+
+.dark-Btn{
+    background: #021024!important;
+    color: #fff!important;
+    i{
+        color: #fff!important;
+    }
+}
+
+.disLiMn{
+    display: none!important;
+}
+
+
+@media (max-width: 767px){
+
+    body{
+        grid-template-areas: "header header header"
+                             "main main main";
+    }
+
+    .disLiMn{
+        display: block!important;
+    }
+
+
+    header{
+        grid-area: header;
+        width: 100%!important;
+        border-radius: 0;
+    }
+
+    .sct{
+        position: fixed;
+        left: 100%;
+    }
+
+    main{
+        grid-area: main;
+    }
+
+    .menuToggle{
+        display: block!important;
+    }
+
+    .fa-bars-staggered{
+        position: absolute;
+        top: 2.2%;
+        right: 5%;
+        font-size: 120%;
+
+    }
+
+    .first-list{
+        position: fixed;
+        left: 150%;
+        top: 7.4%;
+        transition: left 0.3s;
+    }
+
+    .first-list .infoTxt{
+        display: flex!important;
+        flex-direction: column-reverse!important;
+        padding: 4%;
+        background-color: #5f6b81;
+        img{
+            margin-left: 25%;
+        }
+    }
+
+    header nav div  {
+        .linkA1 a:hover::after, 
+        .linkA1 a.active::after,
+        .linkA3 a:hover::after,
+        .linkA4 a:hover::after{
+            margin-left: -8%;
+            width: 8%;
+        }
+    
+        .linkA4 a:hover::after,
+        .linkA4 a.active{
+            margin-top: 11%;
+            width: 36% !important;
+            height: 2%;
+            margin-left: -34%;
+        }
+    
+        .linkA3 a:hover::after,
+        .linkA3 a.active{
+            margin-top: 11%;
+            width: 40% !important;
+            height: 2%;
+            margin-left: -40%;
+        }
+    }
+    
+    .first_ctn{
+        padding-top: 3%;
+        img{
+            margin-top: 5%;
+        }
+    }
+    
+  
+    /*/*//****//***/
+
+    main .txtBox_ctn{
+        width: 97%;
+    }
+
+    main .addNew{
+        margin-top: 15%!important;
+    }
+
+}
+
+
+
+.bckScroll{
+    background-color: rgb(65, 92, 167);
+}
+
+.blockft{
+    border-radius: 20px!important;
+    display: block;
+    width: 30%;
+    left: 70%!important;
+}
+
