--- a/SAIgpt/profile_page/style.css
+++ b/SAIgpt/profile_page/style.css
@@ -45,6 +45,10 @@ header{
     padding: 1%;
     height: 65px;
     border-radius: 0 0 10px 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
 }
 
 header nav {
@@ -144,10 +148,6 @@ main{
     backdrop-filter: blur(100px)!important;
 }
 
-main .profileBox section{
-    border: 1px solid #fff;
-}
-
 main .profileBox{
     display: flex;
     flex-direction: row;
@@ -185,6 +185,7 @@ main .profileBox img{
 
 .id_options ul li:hover{
     background-color: #668dc083;
+    cursor: pointer;
 }
 
 .id_options ul li .active{
@@ -212,7 +213,21 @@ main .profileBox img{
     }
 }
 
+.prflIfn_cnt{
+    border-radius: 10px 0 0 10px;
+    border-bottom: 1px solid #fff;
+    border-left: 1px solid #fff;
+    border-top: 1px solid #fff;
+}
 
+.all-Info-ctn{
+    background-color: #c9c9c9d0;
+    border-radius: 0 20px 20px 0;
+    box-shadow: inset 0 0 2px 1px#000;
+    border-bottom: 1px solid #fff;
+    border-right: 1px solid #fff;
+    border-top: 1px solid #fff;
+}
 
 
 
@@ -237,12 +252,13 @@ main .profileBox img{
     border: 2px solid var(--sndDrkClr);
     background  : transparent;
     padding: 2%;
-    color       : #26B4FF;
+    color       : #1d2b33;
     border-radius: 20px;    
 }
 
 .btn-outline-primary:hover{
     background-color: var(--mainColor);
+    color       : #3e8bb8;
 }
 
 .md-btn-flat{
@@ -754,6 +770,7 @@ section:nth-child(2){width: 70%;}
 
     .prflIfn_cnt{
         flex-basis: 100%;
+        border-right: 1px solid #fff;
     }
 
     header{
@@ -766,6 +783,7 @@ section:nth-child(2){width: 70%;}
         height: 95%!important;
         position: fixed;
         left: -120%;
+        border-left: 1px solid #fff;
 
         
         transition: left 0.3s!important;
